--- a/PrzepisyKulinarne/PrzepisyKulinarne.vcxproj
+++ b/PrzepisyKulinarne/PrzepisyKulinarne.vcxproj
@@ -123,13 +123,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="file.c" />
+    <ClCompile Include="assign.c" />
     <ClCompile Include="func.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="menu.c" />
+    <ClCompile Include="struct.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="file.h" />
+    <ClInclude Include="assign.h" />
     <ClInclude Include="func.h" />
+    <ClInclude Include="menu.h" />
     <ClInclude Include="struct.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
