--- a/PrzepisyKulinarne/PrzepisyKulinarne.vcxproj.filters
+++ b/PrzepisyKulinarne/PrzepisyKulinarne.vcxproj.filters
@@ -18,10 +18,16 @@
     <ClCompile Include="main.c">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="file.c">
+    <ClCompile Include="func.c">
       <Filter>Pliki nagłówkowe</Filter>
     </ClCompile>
-    <ClCompile Include="func.c">
+    <ClCompile Include="struct.c">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
+    <ClCompile Include="assign.c">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
+    <ClCompile Include="menu.c">
       <Filter>Pliki nagłówkowe</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,10 +35,13 @@
     <ClInclude Include="struct.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="file.h">
+    <ClInclude Include="func.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="func.h">
+    <ClInclude Include="assign.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
+    <ClInclude Include="menu.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
